--- a/exercises/terminal-practice/dir-two/index.html
+++ b/exercises/terminal-practice/dir-two/index.html
@@ -1,7 +1,7 @@
-<DOCTYPE!>
+<!DOCTYPE html>
 <html>
   <head></head>
   <body>
-    <h3>Hello World></h3>
+    <h3>Hello World</h3>
   </body>
 </html>
