--- a/exercises/terminal-practice/dir-two/index.html
+++ b/exercises/terminal-practice/dir-two/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+  </head>
   <body>
-    <h3>Hello World</h3>
+    <script src="main.js"></script>
   </body>
 </html>
