responsive-color-grid

--- a/exercises/design-a-blog/index.html
+++ b/exercises/design-a-blog/index.html
@@ -16,7 +16,7 @@
 
 
 
-  <img id="flag" src="download.jpeg"/>
+  <!-- <img id="flag" src="download.jpeg"/> -->
 
   <div class="navbar">
     <a href="home">Home</a>
