--- a/exercises/color-grid/index.html
+++ b/exercises/color-grid/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Color Grid</title>
   <link rel="stylesheet" href="style.css"/>
@@ -26,9 +27,5 @@
     <div class="fifth"></div>
   </div>
 
-  <!-- <section class="fifth">
-    <div id=green></div>
-    <div id=orange></div> -->
-
-
 </body>
+</html>
