--- a/exercises/dj-js/index.html
+++ b/exercises/dj-js/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <div class="square" onclick= "red()"></div>
+  <div class="square" id="change"></div>
 
   <script src="main.js"></script>
 </body>
