--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -8,10 +8,12 @@
 <body>
   <h1 id="title">Mario Pest Control</h1>
 
-  <h2>Goomba</h2>
+  <h2 class="pest">Goomba</h2>
   <img src="goomba.jpeg"/>
-  <h3 class="totalCaught">Total Caught<span</h3>
-  <input type="text" id="count"/>
+  <h3 class="costPer">Price per Catch: 5 Coins</h3>
+  <h3 class="totalCaught">Number Caught<span</h3>
+  <input type="text" id="count"/></br>
+  <button id="compute">Total Cost for Goomba</button>
 
 
 
