--- a/projects/css-zen-garden/index.html
+++ b/projects/css-zen-garden/index.html
@@ -12,7 +12,7 @@
 
   <container-fluid id="mainHeader">
 
-    <header class="greenSpace">
+    <header class="greenSpaceTop">
       <h1>CSS ZEN GARDEN</h1>
       <h4 class="footer italic">The Beauty of <span class="dotUnderline">CSS</span> Design</h4>
     </header>
@@ -22,53 +22,91 @@
   <container class="verbage">
 
       <p class="demonstration">A demonstration of what can be accomplished through <span class="dotUnderline">CSS</span>-based design. Select any style sheet from the list to load it into the page.</p>
-
-      <p class="demonstration">Download the example<link></link>and<link></link></p>
+      <p class="demonstration">Download the example <a class="link" href="/examples/index">HTML FILE</a> and <a class="link" href ="/examples/style.css">CSS FILE</a></p>
+    </br>
 
       <h3>THE ROAD TO ENLIGHTENMENT</h3>
 
       <p class="enlightenment">Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible <span class="dotUnderline">DOM</span>s, broken <span class="dotUnderline">CSS</span> support, and abandoned browsers.</p>
-
       <p class="enlightenment">We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the <span class="dotUnderline">W3C</span>, <span class="dotUnderline">WASP</span>, and the major browser creators.</p>
-
       <p class="enlightenment">The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+    </br>
 
       <h3>SO WHAT IS THIS ABOUT?</h3>
 
       <p class="about">There is a continuing need to show the power of <span class="dotUnderline">CSS</span>. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The <span class="dotUnderline">HTML</span> remains the same, the only thing that has changed is the external <span class="dotUnderline">CSS</span> file. Yes, really.</p>
-
       <p class="about"><span class="dotUnderline">CSS</span> allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
 
-      <container-fluid>
+      <div class ="lightGreen">
+      </br>
         <h3>PARTICIPATION</h3>
 
         <p class="participation">Strong visual design has always been our focus. You are modifying this page, so strong <span class="dotUnderline">CSS</span> skills are necessary too, but the example files are commented well enough that even <span class="dotUnderline">CSS</span> novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with <span class="dotUnderline">CSS</span>.</p>
-
         <p class="participation">You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
-
-        <p class="participation">Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your <span class="dotUnderline">CSS</span> file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+        <p class="participation">Download the sample <a class="link" href="/examples/index">HTML</a> and <a class="link" href="/examples/index">CSS</a> to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your <span class="dotUnderline">CSS</span> file to a web server under your control. <a class="link" href="">Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+      </br>
 
         <h3>BENEFITS</h3>
 
         <p class="benefits">Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
-      </container-fluid>
+      </br>
+      </div>
 
       <h3>REQUIREMENTS</h3>
 
       <p class="requirements">Where possible, we would like to see mostly <span class="dotUnderline">CSS 1 &#38 2</span>. <span class="dotUnderline">CSS 3 &#38 4</span> should be limited to widely-supported elements only, or strong fallbacks should be provided. The <span class="dotUnderline">CSS</span> Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <span class="dotUnderline">CSS</span> validates.</p>
-
       <p class="requirements">Luckily, designing this way shows how well various browsers have implemented <span class="dotUnderline">CSS</span> by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
-
       <p class="requirements">We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
-
-      <p class="requirements">This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work.</p>
+      <p class="requirements">This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see <a class="link" href="">submission guidelines</a>), but we ask you release your CSS under a Creative Commons license identical to the <a class="link" href="">one on this site</a> so that others may learn from your work.</p>
+    </br>
 
   </container>
 
-  <footer class="greenspace">
-    <h3 class="footer"><span class="italic">By</span> Dave Shea. <span class="italic">Bandwidth graciously donated by</span> mediatemple.</h3>
-    <h3 class="footer"><span class="italic">Now available:</span> Zen Garden, the book.</h3>
+  <footer class="greenSpaceBot">
+    <h3 class="footerText"><span class="italicTwo">By</span> Dave Shea. <span class="italicTwo">Bandwidth graciously donated by</span> mediatemple.</h3>
+    <h3 class="footerText"><span class="italicTwo">Now available:</span> Zen Garden, the book.</h3>
   </footer>
+
+  <footer class="drkGreenSpace">
+    <a href="http://validator.w3.org/check/referer" title="Check the validity of this site’s HTML" class="zen-validate-html">HTML</a>
+  </footer>
+
+  <div class="container">
+    <div class="row1">
+      <div class="col-lg-3 col-lg-offset-1">MID CENTURY MODERN</div>
+      <div class="col-lg-3 col-lg-offset-6">GARMENTS</div>
+    </div>
+
+    <!-- <div class="row2">
+      <div class="column1">STEEL</div>
+      <div class="column2">APOTHECARY</div>
+    </div>
+
+    <div class="row3">
+      <div class="column1">SCREEN FILLER</div>
+      <div class="column2">FOUNTAIN KISS</div>
+    </div>
+
+    <div class="row4">
+      <div class="column1">A ROBOT NAMED JIMMY</div>
+      <div class="column2">VERDE MODERNA</div>
+    </div>
+
+    <div class="row5">
+      <div class="column1">VIEW THIS DESIGN'S <span class="dotUnderline">CSS</span></div>
+      <div class="column2"><span class="dotUnderline">CSS</span> RESOURCES</div>
+    </div>
+
+    <div class="row6">
+      <div class="column1"><span class="dotUnderline">FAQ</span></div>
+      <div class="column2">SUBMIT A DESIGN</div>
+    </div>
+
+    <div class="row7">
+      <div class="column1">TRANSLATIONS</div>
+    </div> -->
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
