--- a/projects/css-zen-garden/index.html
+++ b/projects/css-zen-garden/index.html
@@ -15,6 +15,7 @@
       <header class="greenSpaceTop">
         <h1>CSS ZEN GARDEN</h1>
         <h4 class="footer italic">The Beauty of <span class="dotUnderline">CSS</span> Design</h4>
+        <h4 class="viewDesigns">VIEW ALL DESIGNS</h4>
       </header>
     </div>
   </div>
@@ -62,7 +63,7 @@
       <h3>REQUIREMENTS</h3>
 
       <div>
-        <p class="requirements">Where possible, we would like to see mostly <span class="dotUnderline">CSS 1 &#38 2</span>. <span class="dotUnderline">CSS 3 &#38 4</span> should be limited to widely-supported elements only, or strong fallbacks should be provided. The <span class="dotUnderline">CSS</span> Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <span class="dotUnderline">CSS</span> validates.</p>
+        <p class="requirements">Where possible, we would like to see mostly <span class="dotUnderline">CSS 1 &#38 2 </span>usage. <span class="dotUnderline">CSS 3 &#38 4</span> should be limited to widely-supported elements only, or strong fallbacks should be provided. The <span class="dotUnderline">CSS</span> Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your <span class="dotUnderline">CSS</span> validates.</p>
         <p class="requirements">Luckily, designing this way shows how well various browsers have implemented <span class="dotUnderline">CSS</span> by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
         <p class="requirements">We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
         <p class="requirements">This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see <a class="link" href="">submission guidelines</a>), but we ask you release your CSS under a Creative Commons license identical to the <a class="link" href="">one on this site</a> so that others may learn from your work.</p>
@@ -72,59 +73,63 @@
   </div>
 
   <footer class="greenSpaceBot">
-    <h3 class="footerText"><span class="italicTwo">By</span> Dave Shea. <span class="italicTwo">Bandwidth graciously donated by</span> mediatemple.</h3>
-    <h3 class="footerText"><span class="italicTwo">Now available:</span> Zen Garden, the book.</h3>
+    <h3 class="footerText"><span class="italicTwo">By</span> Dave Shea.
+      <span class="italicTwo">Bandwidth graciously donated by</span> mediatemple.
+      <br>
+      <span class="italicTwo">Now available:</span> Zen Garden, the book.</h3>
   </footer>
 
   <footer class="drkGreenSpace">
     <a href="http://validator.w3.org/check/referer" title="Check the validity of this site’s HTML" class="zen-validate-html">HTML</a>
   </footer>
 
-  <div class="containerBottom">
-    <div class="bottomLinks">MID CENTURY MODERN<br>
-      <span class="italic">by </span>Andrew Lohman
+  <ul class="containerBottom">
+    <li class="bottomLinks article">MID CENTURY MODERN<br>
+      <span class="byItalic">by </span><b>Andrew Lohman</b>
       </br>
-    </div>
-    <div class="bottomLinks">GARMENTS<br>
-      <span class="italic">by </span>Dan Mall
+    </li>
+    <li class="bottomLinks article">GARMENTS<br>
+      <span class="byItalic">by </span><b>Dan Mall</b>
       </br>
-    </div>
-    <div class="bottomLinks">STEEL<br>
-      <span class="italic">by </span>Steffen Knoeller
+    </li>
+    <li class="bottomLinks article">STEEL<br>
+      <span class="byItalic">by </span><b>Steffen Knoeller</b>
       </br>
-    </div>
-    <div class="bottomLinks">APOTHECARY<br>
-      <span class="italic">by </span>Trent Walton
+    </li>
+    <li class="bottomLinks article">APOTHECARY<br>
+      <span class="byItalic">by </span><b>Trent Walton</b>
       </br>
-    </div>
-    <div class="bottomLinks">SCREEN FILLER<br>
-      <span class="italic">by </span>Elliot Jay Stocks
+    </li>
+    <li class="bottomLinks article">SCREEN FILLER<br>
+      <span class="byItalic">by </span><b>Elliot Jay Stocks</b>
       </br>
-    </div>
-    <div class="bottomLinks">FOUNTAIN KISS<br>
-      <span class="italic">by </span>Jeremy Carlson
+    </li>
+    <li class="bottomLinks article">FOUNTAIN KISS<br>
+      <span class="byItalic">by </span><b>Jeremy Carlson</b>
       </br>
-    </div>
-    <div class="bottomLinks">A ROBOT NAMED JIMMY<br>
-      <span class="italic">by </span>meltmedia
+    </li>
+    <li class="bottomLinks article">A ROBOT NAMED JIMMY<br>
+      <span class="byItalic">by </span><b>meltmedia</b>
       </br>
-    </div>
-    <div class="bottomLinks">VERDE MODERNA<br>
-      <span class="italic">by </span>Dave Shea
+    </li>
+    <li class="bottomLinks article">VERDE MODERNA<br>
+      <span class="byItalic">by </span><b>Dave Shea</b>
       </br>
-    </div>
-    <div class="bottomLinks">VIEW THIS DESIGN'S CSS
-    </div>
-    <div class="bottomLinks">CSS RESOURCES
-    </div>
-    <div class="bottomLinks">FAQ
-    </div>
-    <div class="bottomLinks">SUBMIT A DESIGN
-    </div>
-    <div class="bottomLinks">TRANSLATIONS
-    </div>
+    </li>
+  </ul>
+  <ul class="ulSupport">
+    <li class="bottomLinks support">VIEW THIS DESIGN'S CSS
+    </li>
+    <li class="bottomLinks support">CSS RESOURCES
+    </li>
+    <li class="bottomLinks support">FAQ
+    </li>
+    <li class="bottomLinks support">SUBMIT A DESIGN
+    </li>
+    <li class="bottomLinks support">TRANSLATIONS
+    </li>
 
-  </div>
+  </ul>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
